# opengl-learning

./: .gitignore  CMakeLists.txt  README.md  build.sh  buildandrun.sh  main.cpp
cmake_data/: Makefile
include/: camera.hpp  shader.h  shader.hpp
include/core/: camera.hpp  shader.hpp
include/core/Renderer/: Renderable.hpp  SceneRenderer.hpp
include/core/SceneObject/: SceneObject.hpp  SceneObjectBehaviour.hpp  SceneObjectBuilder.hpp
include/scripts/: ExampleRotationScript.hpp
shaders/fragment/: frag0.frag
shaders/vertex/: vert0.vert
src/: camera.cpp  shader.cpp
src/core/: camera.cpp  shader.cpp
src/core/Renderer/: SceneRenderer.cpp
src/core/SceneObject/: SceneObject.cpp  SceneObjectBuilder.cpp
src/scripts/: ExampleRotationScript.cpp
